--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <main role="main" class="container">
             <div class="blog-post">
-                <h2 class="blog-post-title">偶像选秀的分组真的公平吗？</h2>
+                <h2 class="blog-post-title">偶像选秀的分组如何影响出道名单</h2>
                 <p class="blog-post-meta" style="font-family: roboto">vol. 202010</p>
 
                 <div class="blog-content">
