--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
         <div class="container">
             <header class="blog-header py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
-                    <div class="col-4">
+                    <div class="col-6">
                         <a class="blog-header-logo text-dark" href="#">△ 零碎月报</a>
+                        <a class="text-dark" href="about.html" style="margin-left:20px">关于我</a>
+                        <!-- <a class="text-dark" href="history.html" style="margin-left:20px">往期查阅</a> -->
                     </div>
                 </div>
             </header>
@@ -111,13 +113,13 @@
 
         <main role="main" class="container">
             <div class="blog-post">
-                <h2 class="blog-post-title">偶像选秀的分组如何影响出道名单</h2>
+                <h2 class="blog-post-title">偶像选秀分到好曲子得靠运气？可能不一定</h2>
                 <p class="blog-post-meta" style="font-family: roboto">vol. 202010</p>
 
                 <div class="blog-content">
                     <p>到底是选曲捧人，还是人捧选曲，一直是我看选秀综艺的迷思之一。</p>
 
-                    <p>今年的《青春有你2》，我基本上是跟着微博热搜追过来的，许多选手的舞台表现真的非常出色。但直到最近打开某音乐app才发现，原来这档节目远不止那几首曲子。</p>
+                    <p>今年的《青春有你2》，基本上是跟着微博热搜追过来的我，直到最近打开某音乐app才发现，原来这档节目远不止那几首曲子和那几个被反复刷屏的舞台。</p>
 
                     <p>这就让我联想到另一个问题：青你2这档节目中是否存在“弃曲”和“黄金选曲”？我们是否有理由怀疑，制作方或许有意地把一些种子选手放在一个组里，增加曝光效果？</p>
                 </div>
