--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     <div class="col-6">
                         <a class="blog-header-logo text-dark" href="index.html">△ 零碎月报</a>
                         <a class="text-dark" href="#" style="margin-left:20px">关于我</a>
-                        <a class="text-dark" href="history.html" style="margin-left:20px">往期查阅</a>
+                        <!-- <a class="text-dark" href="history.html" style="margin-left:20px">往期查阅</a> -->
                     </div>
                 </div>
             </header>
