--- a/20201001.html
+++ b/20201001.html
@@ -104,6 +104,7 @@
                 <div class="row flex-nowrap justify-content-between align-items-center">
                     <div class="col-6">
                         <a class="blog-header-logo text-dark" href="#">△ 零碎月报</a>
+                        <a class="text-dark" href="index.html" style="margin-left:20px">下一篇</a>
                         <a class="text-dark" href="about.html" style="margin-left:20px">关于我</a>
                         <!-- <a class="text-dark" href="history.html" style="margin-left:20px">往期查阅</a> -->
                     </div>
