update mobile style

--- a/about.html
+++ b/about.html
@@ -25,10 +25,17 @@
         <div class="container">
             <header class="blog-header py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
-                    <div class="col-6">
-                        <a class="blog-header-logo text-dark" href="index.html">△ 零碎月报</a>
-                        <a class="text-dark" href="#" style="margin-left:20px">关于我</a>
-                        <!-- <a class="text-dark" href="history.html" style="margin-left:20px">往期查阅</a> -->
+                    <div class="row">
+                        <div class="col">
+                            <a class="blog-header-logo text-dark" href="index.html">
+                                △ 零碎月报
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a class="text-dark nav-item" href="index.html">
+                                最新一刊
+                            </a>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -52,7 +59,7 @@
 
         <footer class="blog-footer">
             <p>
-                Copyright © 2020-Present 零碎月报. All rights reserved.
+                Copyright © 2020-Present TriviaOnly. All rights reserved.
             </p>
         </footer>
     
