--- a/20201001.html
+++ b/20201001.html
@@ -102,11 +102,20 @@
         <div class="container">
             <header class="blog-header py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
-                    <div class="col-6">
-                        <a class="blog-header-logo text-dark" href="#">△ 零碎月报</a>
-                        <a class="text-dark" href="index.html" style="margin-left:20px">下一篇</a>
-                        <a class="text-dark" href="about.html" style="margin-left:20px">关于我</a>
-                        <!-- <a class="text-dark" href="history.html" style="margin-left:20px">往期查阅</a> -->
+                    <div class="row">
+                        <div class="col">
+                            <a class="blog-header-logo text-dark" href="index.html">
+                                △ 零碎月报
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a class="text-dark nav-item" href="index.html">
+                                下一篇
+                            </a>
+                            <a class="text-dark nav-item" href="about.html" style="margin-left:20px">
+                                关于我
+                            </a>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -334,7 +343,7 @@
 
         <footer class="blog-footer">
             <p>
-                Copyright © 2020-Present 零碎月报. All rights reserved.
+                Copyright © 2020-Present TriviaOnly. All rights reserved.
             </p>
         </footer>
     
