--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             .songs-wrapper {
                 width: 100%;
                 overflow: hidden;
-                padding-bottom: 3rem;
+                /* padding-bottom: 3rem; */
             }
 
             .songs-wrapper .see-more{
@@ -69,7 +69,7 @@
                 -webkit-box-direction:normal;
                 -ms-flex-direction:row;
                 flex-direction:row;
-                width:200px;
+                width:150px;
                 -ms-flex-wrap:wrap;
                 flex-wrap:wrap;
                 margin-top:3rem;
@@ -186,7 +186,8 @@
                 position:absolute;
                 display:none;
                 right:0;
-                padding-left: 25px;
+                padding-left: 10px;
+                padding-right: 45px;
                 -webkit-transform:translate(100%,0);
                 -ms-transform:translate(100%,0);
                 transform:translate(100%,0);
@@ -233,6 +234,29 @@
                 display:flex;
             }
 
+
+            /* for desktop */
+            @media only screen and (min-width: 768px) {
+
+                .songs-rhymes-examples{
+                    position:absolute;
+                    display:none;
+                    right:0;
+                    padding-left: 25px;
+                    -webkit-transform:translate(100%,0);
+                    -ms-transform:translate(100%,0);
+                    transform:translate(100%,0);
+                    top:5px
+                }
+
+
+                .songs-rhymes{
+                    width:200px;
+                }
+
+
+            }
+
         </style>
     
     <!-- boilerplate.css -->
@@ -242,11 +266,20 @@
         <div class="container">
             <header class="blog-header py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
-                    <div class="col-6">
-                        <a class="blog-header-logo text-dark" href="#">△ 零碎月报</a>
-                        <a class="text-dark" href="20201001.html" style="margin-left:20px">上一篇</a>
-                        <a class="text-dark" href="about.html" style="margin-left:20px">关于我</a>
-                        <!-- <a class="text-dark" href="history.html" style="margin-left:20px">往期查阅</a> -->
+                    <div class="row">
+                        <div class="col">
+                            <a class="blog-header-logo text-dark" href="#">
+                                △ 零碎月报
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a class="text-dark nav-item" href="20201001.html">
+                                上一篇
+                            </a>
+                            <a class="text-dark nav-item" href="about.html" style="margin-left:20px">
+                                关于我
+                            </a>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -299,12 +332,12 @@
 
         <footer class="blog-footer">
             <p>
-                Copyright © 2020-Present 零碎月报. All rights reserved.
+                Copyright © 2020-Present TriviaOnly. All rights reserved.
             </p>
         </footer>
 
         <script src='assets/scripts/d3.v4.12.0+jetpack.min.js'></script>
-        <script src="assets/scripts/ryhmes.js"></script>
+        <script src="assets/scripts/ryhmes-table.js"></script>
     
     </body>
 </html>
