update grouping mobile setting

--- a/20201001.html
+++ b/20201001.html
@@ -94,6 +94,10 @@
                 font-weight: 400;
             }
 
+            .grouping-mobile {
+                width: 100%;
+            }
+
         </style>
 
     </head>
@@ -123,7 +127,7 @@
 
         <main role="main" class="container">
             <div class="blog-post">
-                <h2 class="blog-post-title">偶像选秀分到好曲子得靠运气？可能不一定</h2>
+                <h2 class="blog-post-title">偶像选秀分组，不一定是运气使然</h2>
                 <p class="blog-post-meta" style="font-family: roboto">vol. 202010</p>
 
                 <div class="blog-content">
@@ -331,6 +335,8 @@
                         </div>
                     </div>
 
+                
+                    <img class="grouping-mobile" src="assets/img/选秀分组_web.png"/>
                 </div>
                 <!-- end of ai2html -->
 
@@ -346,6 +352,9 @@
                 Copyright © 2020-Present TriviaOnly. All rights reserved.
             </p>
         </footer>
+
+        <script src='assets/scripts/d3.v4.12.0+jetpack.min.js'></script>
+        <script src="assets/scripts/grouping-mobile.js"></script>
     
     </body>
 </html>
