switch to treemap

--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
 
                 <!-- begin of quote-->
                 <div class="quote-content">
-                    <p>爱<span class="quote-highlight">别离</span> 痛到<span class="quote-highlight">心悸</span> 下一秒<span class="quote-highlight">窒息</span></p>
-                    <p>快弥漫双眼 湖水覆盖的<span class="quote-highlight">回忆</span></p>
-                    <p>爱<span class="quote-highlight">别离</span> 眼泪落下越来越<span class="quote-highlight">清晰</span></p>
-                    <p>有多么<span class="quote-highlight">爱你</span> 幸福像梦境 逝去</p>
+                    <p>爱<span class="quote-highlight">别离，</span>痛到<span class="quote-highlight">心悸，</span>下一秒<span class="quote-highlight">窒息</span></p>
+                    <p>快弥漫双眼，湖水覆盖的<span class="quote-highlight">回忆</span></p>
+                    <p>爱<span class="quote-highlight">别离，</span> 眼泪落下越来越<span class="quote-highlight">清晰</span></p>
+                    <p>有多么<span class="quote-highlight">爱你，</span> 幸福像梦境逝去</p>
                 </div>
                 <!-- end of blog quote -->
 
@@ -317,15 +317,21 @@
                 </div>
                 <!-- end of blog content -->
 
+                <!-- table view -->
                 <!-- begin of song wrapper -->
-               <div class="songs-wrapper">
+               <!-- <div class="songs-wrapper">
                     <p class="chart-title">华语歌曲最常见的押韵</p>
                     <div class="chart-title-sub"></div>
-                    <div class="songs-rhymes">
-                    </div>
-
-               </div>
+                    <div class="songs-rhymes"></div>
+               </div> -->
                 <!-- end of song wrapper -->
+
+                <!-- interative graphic view -->
+               <div class="songs-treemap">
+                    <div class="chart-title">华语歌曲最常见的押韵</div>
+               </div>
+
+
 
             </div>
         </main>
