--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 margin:0 auto;
                 font-size:1rem;
                 text-align:center;
-                font-weight:400;
+                font-style: italic;
                 margin-top:10px;
             }
 
@@ -254,6 +254,15 @@
                     width:200px;
                 }
 
+                .song-rhymes-tooltip {
+                    position: absolute;
+                    width: 120px;
+                    background-color: black;
+                    color: #fff;
+                    text-align: center;
+                    border-radius: 6px;
+                    z-index:1;
+                }
 
             }
 
@@ -302,10 +311,10 @@
 
                 <!-- begin of quote-->
                 <div class="quote-content">
-                    <p>爱<span class="quote-highlight">别离，</span>痛到<span class="quote-highlight">心悸，</span>下一秒<span class="quote-highlight">窒息</span></p>
+                    <p>爱<span class="quote-highlight">别离</span>，痛到<span class="quote-highlight">心悸</span>，下一秒<span class="quote-highlight">窒息</span></p>
                     <p>快弥漫双眼，湖水覆盖的<span class="quote-highlight">回忆</span></p>
-                    <p>爱<span class="quote-highlight">别离，</span> 眼泪落下越来越<span class="quote-highlight">清晰</span></p>
-                    <p>有多么<span class="quote-highlight">爱你，</span> 幸福像梦境逝去</p>
+                    <p>爱<span class="quote-highlight">别离</span>，眼泪落下越来越<span class="quote-highlight">清晰</span></p>
+                    <p>有多么<span class="quote-highlight">爱你</span>，幸福像梦境逝去</p>
                 </div>
                 <!-- end of blog quote -->
 
@@ -329,6 +338,7 @@
                 <!-- interative graphic view -->
                <div class="songs-treemap">
                     <div class="chart-title">华语歌曲最常见的押韵</div>
+                    <div class="chart-title-sub">移动鼠标查看例曲</div>
                </div>
 
 
