--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
         <main role="main" class="container">
             <div class="blog-post">
-                <h2 class="blog-post-title">如何写一首随便的华语歌词？</h2>
+                <h2 class="blog-post-title">如何写一首烂大街的华语歌？</h2>
                 <p class="blog-post-meta" style="font-family: roboto">vol. 202010(2)</p>
 
                 <div class="blog-content" style="margin-bottom:0px">
