add start color

--- a/index.html
+++ b/index.html
@@ -258,8 +258,9 @@
                     position: absolute;
                     width: 120px;
                     background-color: black;
+                    padding-left: 5px;
                     color: #fff;
-                    text-align: center;
+                    text-align: left;
                     border-radius: 6px;
                     z-index:1;
                 }
