add mobile version

--- a/index.html
+++ b/index.html
@@ -234,6 +234,10 @@
                 display:flex;
             }
 
+            .songs-treemap {
+                display: none;
+            }
+
 
             /* for desktop */
             @media only screen and (min-width: 768px) {
@@ -264,6 +268,10 @@
                     border-radius: 6px;
                     z-index:1;
                 }
+
+                .songs-wrapper {
+                    display: none;
+            }
 
             }
 
@@ -329,11 +337,11 @@
 
                 <!-- table view -->
                 <!-- begin of song wrapper -->
-               <!-- <div class="songs-wrapper">
+               <div class="songs-wrapper">
                     <p class="chart-title">华语歌曲最常见的押韵</p>
                     <div class="chart-title-sub"></div>
                     <div class="songs-rhymes"></div>
-               </div> -->
+               </div>
                 <!-- end of song wrapper -->
 
                 <!-- interative graphic view -->
