be more keyboard

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                 .songs-wrapper {
                     display: none;
-            }
+                }
 
             }
 
@@ -286,7 +286,7 @@
                 <div class="row flex-nowrap justify-content-between align-items-center">
                     <div class="row">
                         <div class="col">
-                            <a class="blog-header-logo text-dark" href="#">
+                            <a class="blog-header-logo text-dark" href="index.html">
                                 △ 零碎月报
                             </a>
                         </div>
