--- a/index.html
+++ b/index.html
@@ -273,6 +273,12 @@
                     display: none;
                 }
 
+                .shadow {
+                    -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+                    filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+                    /* Similar syntax to box-shadow */
+                }
+
             }
 
         </style>
