update chart type

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         <main role="main" class="container">
             <div class="blog-post">
-                <h2 class="blog-post-title">喜欢的华语歌越来越少，但发歌的频率却更高了</h2>
+                <h2 class="blog-post-title">喜欢的华语歌越来越少<br>但歌手们发歌的频率却更高了</h2>
                 <p class="blog-post-meta" style="font-family: roboto">vol. 202011</p>
 
                 <div class="blog-content" style="margin-bottom:0px">
