--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <!-- Custom styles for this template -->
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
         <link href="css/blog.css" rel="stylesheet">
         <!-- <link href="css/scrolly.css" rel="stylesheet"> -->
 
