Change background color

--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
                             <a class="text-dark nav-item" href="20201030.html">
                                 上一篇
                             </a>
+                            <a class="text-dark nav-item" href="index.html" style="margin-left:20px">
+                                下一篇
+                            </a>
                             <a class="text-dark nav-item" href="about.html" style="margin-left:20px">
                                 关于我
                             </a>
