--- a/20201001.html
+++ b/20201001.html
@@ -113,7 +113,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a class="text-dark nav-item" href="index.html">
+                            <a class="text-dark nav-item" href="20201030.html">
                                 下一篇
                             </a>
                             <a class="text-dark nav-item" href="about.html" style="margin-left:20px">
@@ -145,7 +145,7 @@
                     <!-- Artboard: Artboard_1_copy -->
                     <div id="g-__web-Artboard_1_copy" class="g-artboard" style="max-width: 591px;max-height: 1405px;margin-bottom:30px" data-aspect-ratio="0.421" data-min-width="0">
                 <div style="padding: 0 0 237.7327% 0;"></div>
-                        <img id="g-__web-Artboard_1_copy-img" class="g-aiImg" alt="" src="assets/img/web-Artboard_1png.png"/>
+                        <img id="g-__web-Artboard_1_copy-img" class="g-aiImg" alt="" src="assets/img/web-Artboard_2png.png"/>
                         <div id="g-ai0-1" class="g-Layer_1 g-aiAbs g-aiPointText" style="top:2.9616%;margin-top:-7.6px;left:30.6964%;width:73px;">
                             <p class="g-pstyle0">出道选手</p>
                         </div>
@@ -336,7 +336,7 @@
                     </div>
 
                 
-                    <img class="grouping-mobile" src="assets/img/选秀分组_web.png"/>
+                    <img class="grouping-mobile" src="assets/img/选秀分组_web2.png"/>
                 </div>
                 <!-- end of ai2html -->
 
