--- a/20201101.html
+++ b/20201101.html
@@ -164,7 +164,7 @@
                             <a class="text-dark nav-item" href="20201030.html">
                                 上一篇
                             </a>
-                            <a class="text-dark nav-item" href="index.html" style="margin-left:20px">
+                            <a class="text-dark nav-item" href="20210116.html" style="margin-left:20px">
                                 下一篇
                             </a>
                             <a class="text-dark nav-item" href="about.html" style="margin-left:20px">
