Add legend color

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                         });
                     </script>
 
-                    <p>上图颜色越暖，表示情感越积极，比如“恭喜肖战！不得不说一句牛逼！早晚每天都听的歌！《光点》很喜欢”。</p>
+                    <p>上图<span style="background-color: rgb(245, 117, 69); color: white;">颜色越暖，表示情感越积极</span>，比如“恭喜肖战！不得不说一句牛逼！早晚每天都听的歌！《光点》很喜欢”。</p>
                     
-                    <p>颜色越冷，表示情感越负面，比如“不得不感叹中国粉丝的消费力多强以及审美多差”。前1000条评论中，这种冷言冷语的微博仅仅只有82条……我觉得更应该感叹的是肖战粉丝的控评能力！</p>
+                    <p><span style="background-color: rgb(0, 122, 189); color: white;">颜色越冷，表示情感越负面</span>，比如“不得不感叹中国粉丝的消费力多强以及审美多差”。前1000条评论中，这种冷言冷语的微博仅仅只有82条……我觉得更应该感叹的是肖战粉丝的控评能力！</p>
 
                     <p>于是我再往下挖了挖，爬取了共计4198条评论，正常地球人都不可能爬到的楼层。</p>
 
