--- a/20210513.html
+++ b/20210513.html
@@ -111,9 +111,9 @@
                     
                     <p>前1000条评论中，这种冷言冷语的微博仅仅只有82条……和肖战粉丝的购买力一样，这些粉丝的控评能力也非常可怕。</p>
 
-                    <p class="paragraph-xiaozhan">于是我再往下挖了挖，爬取了共计4198条评论，正常地球人都不可能爬到的楼层。不出所料，评论区是发了大水般的正能量。</p>
+                    <p>于是我再往下挖了挖，爬取了共计4198条评论，正常地球人都不可能爬到的楼层。不出所料，评论区是发了大水般的正能量。</p>
 
-                    <p>既然是“灌水”，当然得“灌”彻到底。这一片评论的汪洋大海中，想要找到点不同的意见真的太困难。这就是为什么我讨厌饭圈的控评文化：在这个已经有众多议题限制的网络空间中，娱乐话题本应该是最轻松自由的，然后，饭圈的控评文化正在剥夺这最后一点仅剩的自由。<img src="assets/img/M.png" style="width: 15px;" /></p>
+                    <p>这一片评论的汪洋大海中，想要找到点不同的意见真的太困难。这就是为什么我讨厌饭圈的控评文化：在这个已经有众多议题限制的网络空间中，娱乐话题本应该是最轻松自由的，然后，饭圈的控评文化正在剥夺这最后一点仅剩的自由。<img src="assets/img/M.png" style="width: 15px;" /></p>
 
 
 
