--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             .index-wrap a:link {
                 text-decoration: none;
-                color: #000;
+                color: #343a40;
             }
 
             .index-bg {
